--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "frontend-project-lvl3",
   "version": "1.0.0",
   "description": "RSS aggregator",
-  "main": "index.js",
   "scripts": {
     "test": "jest"
   },
@@ -26,11 +25,19 @@
     "@babel/preset-env": "^7.8.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
+    "babel-loader": "^8.0.6",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.8.1",
-    "jest": "^25.1.0"
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.1.0",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.8.3",
+    "bootstrap": "^4.4.1"
   }
 }
