--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,4 +17,5 @@ extends:
   - 'plugin:jest/recommended'
 
 rules:
-  no-console: 0
+  no-param-reassign: ["error", { "props": false }]
+  no-console: ["error", { allow: ["warn", "error"] }]
