--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
+    "@babel/runtime-corejs3": "^7.10.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "i18next": "^19.3.2",
