--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [13.12.0-alpine]
+        node-version: [13.x]
 
     steps:
       - uses: actions/checkout@v2
