--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "jest": "^25.1.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
@@ -44,7 +45,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "i18next": "^19.3.2",
-    "jquery": "^3.4.1",
+    "jquery": ">=3.5.0",
     "lodash": "^4.17.15",
     "melanke-watchjs": "^1.5.2",
     "popper.js": "^1.16.1",
